// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SummaryList Component > matches the snapshot with ReactNode as value 1`] = `
<DocumentFragment>
  <dl
    class="govuk-summary-list"
  >
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
        Header 1
      </dt>
      <dd
        class="govuk-summary-list__value"
      >
        <span>
          ReactNode Value
        </span>
      </dd>
      <dd
        class="govuk-summary-list__actions"
      >
        <ul
          class="govuk-summary-list__actions-list"
        />
      </dd>
    </div>
  </dl>
</DocumentFragment>
`;

exports[`SummaryList Component > matches the snapshot with rows without actions 1`] = `
<DocumentFragment>
  <dl
    class="govuk-summary-list"
  >
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
        Header 1
      </dt>
      <dd
        class="govuk-summary-list__value"
      >
        Value 1
      </dd>
      <dd
        class="govuk-summary-list__actions"
      >
        <ul
          class="govuk-summary-list__actions-list"
        />
      </dd>
    </div>
  </dl>
</DocumentFragment>
`;

exports[`SummaryList Component > matches the snapshot with rows, headers, values, and actions 1`] = `
<DocumentFragment>
  <dl
    class="govuk-summary-list"
  >
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
        Header 1
      </dt>
      <dd
        class="govuk-summary-list__value"
      >
        Value 1
      </dd>
      <dd
        class="govuk-summary-list__actions"
      >
        <ul
          class="govuk-summary-list__actions-list"
        >
          <li
            class="govuk-summary-list__actions-list-item"
          >
            <a
              class="govuk-link"
              href="/path1"
            >
              Action 1
              <span
                class="govuk-visually-hidden"
              >
                Header 1
              </span>
            </a>
          </li>
        </ul>
      </dd>
    </div>
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
        Header 2
      </dt>
      <dd
        class="govuk-summary-list__value"
      >
        Value 2
      </dd>
      <dd
        class="govuk-summary-list__actions"
      >
        <ul
          class="govuk-summary-list__actions-list"
        >
          <li
            class="govuk-summary-list__actions-list-item"
          >
            <a
              class="govuk-link"
              href="/path2"
            >
              Action 2
              <span
                class="govuk-visually-hidden"
              >
                Header 2
              </span>
            </a>
          </li>
        </ul>
      </dd>
    </div>
  </dl>
</DocumentFragment>
`;

exports[`SummaryList Component > renders the correct href and text for actions 1`] = `
<DocumentFragment>
  <dl
    class="govuk-summary-list"
  >
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
        Header 1
      </dt>
      <dd
        class="govuk-summary-list__value"
      >
        Value 1
      </dd>
      <dd
        class="govuk-summary-list__actions"
      >
        <ul
          class="govuk-summary-list__actions-list"
        >
          <li
            class="govuk-summary-list__actions-list-item"
          >
            <a
              class="govuk-link"
              href="/path1"
            >
              Action 1
              <span
                class="govuk-visually-hidden"
              >
                Header 1
              </span>
            </a>
          </li>
        </ul>
      </dd>
    </div>
  </dl>
</DocumentFragment>
`;

exports[`SummaryList Component > renders visually-hidden text for each action 1`] = `
<DocumentFragment>
  <dl
    class="govuk-summary-list"
  >
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
        Header 1
      </dt>
      <dd
        class="govuk-summary-list__value"
      >
        Value 1
      </dd>
      <dd
        class="govuk-summary-list__actions"
      >
        <ul
          class="govuk-summary-list__actions-list"
        >
          <li
            class="govuk-summary-list__actions-list-item"
          >
            <a
              class="govuk-link"
              href="/path1"
            >
              Action 1
              <span
                class="govuk-visually-hidden"
              >
                Header 1
              </span>
            </a>
          </li>
        </ul>
      </dd>
    </div>
  </dl>
</DocumentFragment>
`;
